# ruby_cpp

./: CMakeLists.txt
CMakeModules/: Findmyclass.cmake
Chisq/: Chisq.cc  Chisq.h  Chisq.i  extconf.rb  swigcmd
LibLin/: LibLin.i  example.rb  extconf.rb  swigcmd
